--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.3.10",
     "reflect-metadata": "^0.2.0",
+    "@fastify/multipart": "^6.0.0",
+    "tesseract.js": "^5.1.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
